@@ -38,6 +38,8 @@ ASTERISK_FILE_VERSION(__FILE__, "$Revision$")
 #include "asterisk/module.h"
 #include "asterisk/translate.h"
 #include "asterisk/utils.h"
+#include "asterisk/options.h"
+#include "asterisk/app.h"
 
 static char *tdesc = "Sound File Playback Application";
 
@@ -47,13 +49,19 @@ static char *synopsis = "Play a file";
 
 static char *descrip = 
 "  Playback(filename[&filename2...][|option]):  Plays back given filenames (do not put\n"
-"extension). Options may also be  included following a pipe symbol. The 'skip'\n"
-"option causes the playback of the message to  be  skipped  if  the  channel\n"
-"is not in the 'up' state (i.e. it hasn't been  answered  yet. If 'skip' is \n"
+"extension). Options may also be included following a pipe symbol. The 'skip'\n"
+"option causes the playback of the message to be skipped if the channel\n"
+"is not in the 'up' state (i.e. it hasn't been  answered  yet). If 'skip' is \n"
 "specified, the application will return immediately should the channel not be\n"
 "off hook.  Otherwise, unless 'noanswer' is specified, the channel will\n"
 "be answered before the sound is played. Not all channels support playing\n"
-"messages while still hook. If the file does not exist, will jump to priority n+101 if present.\n";
+"messages while still on hook. If 'j' is specified, the application\n"
+"will jump to priority n+101 if present when a file specified to be played\n"
+"does not exist.\n"
+"This application sets the following channel variable upon completion:\n"
+" PLAYBACKSTATUS    The status of the playback attempt as a text string, one of\n"
+"               SUCCESS | FAILED\n"
+;
 
 STANDARD_LOCAL_USER;
 
@@ -61,14 +69,17 @@ LOCAL_USER_DECL;
 
 static int playback_exec(struct ast_channel *chan, void *data)
 {
-	int res = 0;
+	int res = 0, mres = 0;
 	struct localuser *u;
 	char *tmp = NULL;
-	char *options = NULL;
 	int option_skip=0;
 	int option_noanswer = 0;
-	char *stringp = NULL;
 	char *front = NULL, *back = NULL;
+	int priority_jump = 0;
+	AST_DECLARE_APP_ARGS(args,
+		AST_APP_ARG(filenames);
+		AST_APP_ARG(options);
+	);
 	
 	if (ast_strlen_zero(data)) {
 		ast_log(LOG_WARNING, "Playback requires an argument (filename)\n");
@@ -84,13 +95,16 @@ static int playback_exec(struct ast_channel *chan, void *data)
 		return -1;	
 	}
 
-	stringp = tmp;
-	strsep(&stringp, "|");
-	options = strsep(&stringp, "|");
-	if (options && !strcasecmp(options, "skip"))
-		option_skip = 1;
-	if (options && !strcasecmp(options, "noanswer"))
-		option_noanswer = 1;
+	AST_STANDARD_APP_ARGS(args, tmp);
+
+	if (args.options) {
+		if (!strcasestr(args.options, "skip"))
+			option_skip = 1;
+		if (!strcasestr(args.options, "noanswer"))
+			option_noanswer = 1;
+		if (strchr(args.options, 'j'))
+			priority_jump = 1;
+	}
 	
 	if (chan->_state != AST_STATE_UP) {
 		if (option_skip) {
@@ -115,11 +129,17 @@ static int playback_exec(struct ast_channel *chan, void *data)
 				ast_stopstream(chan);
 			} else {
 				ast_log(LOG_WARNING, "ast_streamfile failed on %s for %s\n", chan->name, (char *)data);
-				ast_goto_if_exists(chan, chan->context, chan->exten, chan->priority + 101);
+				if (priority_jump || option_priority_jumping)
+					ast_goto_if_exists(chan, chan->context, chan->exten, chan->priority + 101);
 				res = 0;
+				mres = 1;
 			}
 			front = back;
 		}
+		if (mres)
+			pbx_builtin_setvar_helper(chan, "PLAYBACKSTATUS", "FAILED");
+		else
+			pbx_builtin_setvar_helper(chan, "PLAYBACKSTATUS", "SUCCESS");
 	}
 	LOCAL_USER_REMOVE(u);
 	return res;
